Generer Bergmodell med navn, lag navn og style

--- a/Fargemannen/Fargemannen.csproj
+++ b/Fargemannen/Fargemannen.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Legend.cs" />
     <Compile Include="MakeringAvBerg.cs" />
     <Compile Include="Model\AnalyseXYModel.cs" />
+    <Compile Include="Model\AnalyseZModel.cs" />
     <Compile Include="Model\SymbolHandlers.cs" />
     <Compile Include="Model\SymbolModel.cs" />
     <Compile Include="ProgressBar.cs">
@@ -250,10 +251,14 @@
     <Compile Include="Symboler\SymbolProsseser.cs" />
     <Compile Include="Symboler\SymbolStyle.cs" />
     <Compile Include="ViewModel\AnalyseXYViewModel.cs" />
+    <Compile Include="ViewModel\AnalyseZViewModel.cs" />
     <Compile Include="ViewModel\FileUploadViewModel.cs" />
     <Compile Include="ViewModel\SymbolsViewModel.cs" />
     <Compile Include="View\AnalyseXY.xaml.cs">
       <DependentUpon>AnalyseXY.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\AnalyseZ.xaml.cs">
+      <DependentUpon>AnalyseZ.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\FileUpload.xaml.cs">
       <DependentUpon>FileUpload.xaml</DependentUpon>
@@ -320,6 +325,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\AnalyseXY.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\AnalyseZ.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
