--- a/Fargemannen/app.config
+++ b/Fargemannen/app.config
@@ -26,6 +26,10 @@
         <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="GalaSoft.MvvmLight" publicKeyToken="e7570ab207bcb616" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-5.4.1.0" newVersion="5.4.1.0" />
+		</dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="DocumentFormat.OpenXml" publicKeyToken="8fb06cb64d019a17" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.2.0" newVersion="3.0.2.0" />
